--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -1,2 +1,30 @@
 :root {
+  // Colors
+  --cl-pri-d: #0097a7;
+  --cl-pri-l: #b2ebf2;
+  --cl-pri: #00bcd4;
+  --cl-sec: #ffc107;
+  --cl-text-pri: #212121;
+  --cl-text-sec: #757575;
+  --cl-icon: #ffffff;
+  --cl-divider: #bdbdbd;
+  // Alert status colors
+  --cl-status-error: #f44336;
+  --cl-status-warn: #ff9800;
+  --cl-status-info: #2196f3;
+  --cl-status-success: #4caf50;
+
+  // Spacing
+  // 8px -> base
+  // 16px -> calc(var(--space) * 2)
+  --space: 8px;
+
+  // Fonts
+  --font-a: "Roboto";
+  --font-b: "Open Sans";
+
+  // Shadows
+  --shadow-s: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  --shadow-m: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  --shadow-l: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
