--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -3,6 +3,7 @@
   --cl-pri-d: #0097a7;
   --cl-pri-l: #b2ebf2;
   --cl-pri: #00bcd4;
+  --cl-pri2: #5d8fc9;
   --cl-sec: #ffc107;
   --cl-text-pri: #212121;
   --cl-text-sec: #757575;
