--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -18,6 +18,10 @@ nav {
 .profil-link {
   position: absolute;
   right: 15px;
+  > i {
+    color: #fff;
+    font-size: 2em;
+  }
 }
 
 .nav-bar {
@@ -79,7 +83,7 @@ nav {
     > a {
       margin: 0 auto;
       > i {
-        font-size: 2em;
+        font-size: 2.5em;
         color: #fff;
       }
     }
