--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -57,8 +57,13 @@ nav {
       right: 0.37em;
       color: var(--cl-pri);
       cursor: pointer;
+      transition: transform 1s ease-in-out;
+      &:hover {
+        transform: rotate(180deg);
+      }
     }
   }
+
   .link-res {
     display: inline;
   }
