ui color &  icon size

--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -1,6 +1,6 @@
 :root {
   // Colors
-  --cl-pri-d: #0097a7;
+  --cl-pri-d: #6200ee;
   --cl-pri-l: #b2ebf2;
   --cl-pri: #00bcd4;
   --cl-pri2: #5d8fc9;
