--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -8,6 +8,7 @@ header {
 nav {
   display: grid;
   grid-template-columns: 0.5fr 4fr 0.3fr;
+  grid-gap: calc(var(--space) * 3);
   align-items: center;
   padding: 0.5rem;
   position: relative;
@@ -20,7 +21,7 @@ nav {
   right: 15px;
   > i {
     color: #fff;
-    font-size: 2em;
+    font-size: 2.4em;
   }
 }
 
@@ -59,6 +60,10 @@ nav {
   display: flex;
   justify-content: flex-end;
   gap: calc(var(--space) * 2);
+  .link {
+    color: #fff;
+    text-decoration: none;
+  }
 }
 
 .link-res {
