--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -66,16 +66,16 @@ a.profil-link {
 }
 
 .myCircle {
-  display: none;
-  width: 90px;
-  height: 45px;
-  border-bottom-left-radius: 110px;
-  border-bottom-right-radius: 110px;
-  border: 45px solid white;
-  border-top: 0;
-  position: absolute;
-  right: 2rem;
-  top: -0.1em;
+  position: fixed;
+  bottom: 2rem;
+  > .material-icons {
+    font-size: 5.5em;
+    position: fixed;
+    bottom: 0.2em;
+    right: 0.37em;
+    color: var(--cl-pri);
+    cursor: pointer;
+  }
 }
 
 // @media
@@ -83,6 +83,16 @@ a.profil-link {
 @media screen and (max-width: 600px) {
   .myCircle {
     display: inline;
+    position: absolute !important;
+    width: 90px;
+    height: 45px;
+    border-bottom-left-radius: 110px;
+    border-bottom-right-radius: 110px;
+    border: 45px solid white;
+    border-top: 0;
+    position: absolute;
+    right: 2rem;
+    top: -0.1em;
     > .material-icons {
       font-size: 5.5em;
       position: fixed;
@@ -100,7 +110,6 @@ a.profil-link {
     width: 100vw;
     height: 60px;
     background: var(--cl-pri-d);
-    // background: linear-gradient(to bottom, var(--cl-pri-d), var(--cl-sec));
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 2fr;
     justify-content: center;
