--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -14,7 +14,7 @@
   --cl-status-warn: #ff9800;
   --cl-status-info: #2196f3;
   --cl-status-success: #4caf50;
-
+  --cl-grey-opace: #d2d2d2b9;
   // Spacing
   // 8px -> base
   // 16px -> calc(var(--space) * 2)
